test/compile-fail/scope/use-no-name-rename/top.rhdl
mod a {}

use a::b as c;
